CIB-48: Display license restrictions in the Web UI. - Add some tweaks to the config package, will need to integrate it into the ConfigurationManager rather than using the direct file access as it does. - Make the User login not nullable in the database.